build: some changes at project